--- a/team.html
+++ b/team.html
@@ -220,7 +220,7 @@
 		<div class="flex flex-wrap">
             <div class="w-full sm:w-1/2 p-6">
 				<div class="w-full md:w-5/5 py-6 px-6 text-center">
-					<img class="w-full md:w-3/5 z-60" width="50" height="60" src="./Asset/shrey.png">
+					<img class="w-full md:w-3/5 z-60" width="50" height="60" src="./Asset/vaibhav.jpeg">
 				</div>
             </div>
             
