--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
   <!-- Font Awesome if you need it
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+  
   -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css">
   
   <!--Replace with your tailwind.css once created-->
@@ -79,10 +81,15 @@
 
 
 
+
 <!-- Home -->
 <div class="pt-24">
 
+	
+
 	<div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
+
+		
 		<!--Left Col-->
 		<div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
 			<p class="tracking-loose text-5xl w-full">RACOON</p>
@@ -166,6 +173,8 @@
 	</div>
 </section>
 		
+
+
 
 <!-- Change the colour #f8fafc to match the previous section colour -->
 <svg class="wave-top" viewBox="0 0 1439 147" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
